Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2385

Kerberos ticket reacquisition with Heimdal krb5 likely broken

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.8.0
    • security
    • None

    Description

      kwho found that when we call krb5_cc_store_cred(), it looks like we should be passing in 'new_creds' instead of 'creds':

      https://github.com/apache/kudu/blob/b357fa9b729ce52627a862e08ebac822ae470bc9/src/kudu/security/init.cc#L279

      Attachments

        Issue Links

          Activity

            People

              kwho Michael Ho
              sailesh Sailesh Mukil
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: